src/test/resources/org/nest/nestml/_cocos/valid/equationsOnlyForInitialValues.nestml
neuron iaf_neuron_ode:

  initial_values:
    V_m mV
    G ms
  end

  equations:
    shape G' = e * t
    V_m' = -1/Tau * V_m + 1/C_m
  end

  parameters:
    C_m     pF = 250pF # Capacity of the membrane
    Tau     ms = 10ms  # Membrane time constant.
  end
end
