src/test/resources/org/nest/nestml/_cocos/invalid/equationsOnlyForStateVariables.nestml
neuron iaf_neuron_ode:

  state:
    V_m mV
  end

  equations:
      G' = e * t
      Tau' = -1/Tau * V_m + 1/C_m
  end

  parameters:
    C_m     pF = 250pF # Capacity of the membrane
    Tau     ms = 10 # Membrane time constant.
    G ms
  end
end